examples/errors/17_not_unique_element/definitions.tmd
group Widget;
group Root {
    + unique Widget
}

element Window -> Root;
element Text -> Widget {
    value: String
}